2007-11-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/*: Add delayed initialization. Only parse the
	parameter file when the force field is called by Setup on a
	particular molecule.

	* src/forcefields/forcefielduff.cpp: Bug fixes.

2007-11-04  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* CMakeLists.txt */CMakeLists.txt: CMake build files contributed
	via Saro Engels and Christian Ehrlicher and the KDE-Win project.

2007-11-04  Chris Morley

	* src/forcefields/forcefieldghemical.cpp(ParsParamFile):
	replaced 4 instances of reserve by resize (on ipar etc).
	Was previously crashing for me.
	
	* include/openbabel/base.h, generic.h: Moved the declaration of
	the OBGenericData base class from generic.h to base.h. This
	potentially reduces dependencies. Most of the derived classes are
	still declared in generic.h. New OBGenericData classes would be
	better with their own header files.
	
	* include/openbabel/atom.h: consequent extra #include.
	
	* src/generic.cpp: OBVibrationData wasn't copying properly. 
	Simplify so uses implicit copy constructor and assignment, which 
	are more reliable.
	
	* src/mol.cpp: remove calculation of _totalSpin from 
	AssignSpinMultiplicity. Done on demand in GetTotalSpinMultiplicity.
	
	* src/descriptor.cpp: minor edit in comment
	
2007-11-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.*: Calculates full UFF energies,
	including out-of-plane bending. Still need to finish all analytical
	gradients.

	* data/UFF.prm: Fixed atom typing rules.

2007-11-02  Michael Banck  <mbanck@gmx.net>

	* src/formats/inchi/inchi.sym: New file.

	* src/formats/inchi/Makefile.am (libinchi_la_LDFLAGS): Use inchi.sym
	to restrict the exported symbols via libtool's -export-symbols option.

	* src/formats/inchi/Makefile.in: Regenerated.

2007-11-02  Kevin Shepherd <kshepherd1@users.sourceforge.net>

	* src/formats/cifformat.cpp: Further to 1821894 this patch